--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <div class="card text-center p-3 mt-4" >
                         <i class="fa-brands fa-google display-1 text-info"></i>
                         <h5 class="card-title">Google</h5>
-                          <p class="card-text">Data Science Head</p>
+                          <p class="card-text">Software engineer</p>
                     </div>
                  </a>
                 </div>
@@ -127,14 +127,14 @@
                     <div class="card text-center p-3 mt-4" >
                         <i class="fa-brands fa-microsoft display-1 text-info"></i>                      
                         <h5 class="card-title">Microsoft</h5>
-                          <p class="card-text">Technical head(US,UK,AUSTRAILIA)</p>
+                          <p class="card-text">Software engineer</p>
                     </div>
                 </div>
                 <div class="col-md-4">
                     <div class="card text-center p-3 mt-4">
                         <i class="fa-brands fa-amazon display-1 text-info"></i>
                         <h5 class="card-title">Amazon</h5>
-                          <p class="card-text">Technical Head(India,Us)</p>
+                          <p class="card-text">Software engineer</p>
                     </div>
                 </div>
 
