--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <img src="images/IMG-20220131-WA0057.jpg" alt="Bijumon P" class="img-fluid rounded-circle" style="height:em;">
 
                 </div>
-                <div class="col-md-6">
+                <div class="col-xs-12 col-sm-12 col-md-6">
                     <h4 class="pt-4">Student at Sree Buddha College of Engineering <br>Programming C • java • python </h4>
                    
                     <footer>-Krishna S Kumar</footer>
