--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-6">
-                    <h4 class="pt-4">Student at Sree Buddha College of Engineering <br>Programming C • java • python </h4>
+                    <h4 class="pt-4">Student at Sree Buddha College of Engineering Programming C • java • python </h4>
                    
                     <footer>-Krishna S Kumar</footer>
                 </div>
